--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -3,7 +3,7 @@ name: Java CI with Gradle
 on:
   push:
     branches:
-      - master
+      - main
       - '*.x'  # Maintenance branches like 1.x, 2.x
     tags:
       - 'v*.*.*'
