Update branch reference to 'main', enhance README validation, and remove sensitive data
- Updated GitHub Actions workflow to use 'main' branch instead of 'master'.
- Introduced README validation task in `build.gradle.kts` to ensure correct dependency details.
- Removed sensitive data and credentials from `gradle.properties` for improved security.
- Updated dependency version in `README.md` to `1.0.1`.

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,7 +10,7 @@ on:
       - 'v*.*.*-RC*'  # Release candidates
       - 'v*.*.*-M*'   # Milestones
   pull_request:
-    branches: [ "master", "*.x" ]
+    branches: [ "main", "*.x" ]
 
 permissions:
   contents: write  # Needed for creating releases
